--- a/css/style.css
+++ b/css/style.css
@@ -693,7 +693,7 @@ button:enabled {
 @media screen and (min-width: 768px) {
   .container {
     padding-left: 55px;
-    width: 140%;
+    width: 100%;
     box-sizing: border-box;
   }
 
@@ -716,7 +716,7 @@ button:enabled {
     background-size: auto;
     height: 870px;
     box-sizing: border-box;
-    width: 140%;
+    width: 100%;
   }
 
   .header-content {
@@ -742,7 +742,7 @@ button:enabled {
   .header-text-description {
     font-size: 1.3rem;
     line-height: 32px;
-    width: 120%;
+    width: 100%;
     height: 100px;
   }
 
@@ -756,7 +756,7 @@ button:enabled {
   .work {
     background-color: #fff;
     padding: 2px 0;
-    width: 140%;
+    width: 100%;
   }
 
   .workhead {
@@ -1086,9 +1086,9 @@ button:enabled {
   .about {
     background-color: #262626;
     padding-bottom: 116px;
-    padding-left: 120px;
-    padding-right: 130px;
-    width: 108%;
+    /*padding-left: 120px;
+    padding-right: 130px;*/
+    width: 100%;
   }
 
   .about-me {
@@ -1157,7 +1157,7 @@ button:enabled {
     justify-content: space-between;
     align-items: flex-start;
     padding: 130px;
-    width: 140%;
+    width: 100%;
     box-sizing: border-box;
   }
 
@@ -1199,7 +1199,7 @@ button:enabled {
   }
 
   .foot-separater {
-    width: 140%;
+    width: 100%;
   }
 
   .social-media-icon1 {
@@ -1208,7 +1208,7 @@ button:enabled {
     list-style: none;
     justify-content: center;
     align-items: center;
-    width: 140%;
+    width: 100%;
   }
 }
 
